[package]
name = "qq_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc_qq = { git = "https://github.com/niuhuan/rust_proc_qq.git", branch = "master" }
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
xunfei_ocr = { path = "../xunfei_ocr" }