[package]
name = "xunfei_ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = "0.4.19"
url = "2"
hmac-sha256 = "1.1.2"
base64 = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.8"
hyper-tls = "0.5.0"
async-recursion = "0.3.2"
futures = "0.3.17"
futures-util = "0.3.17"
anyhow = "1.0.45"
